update starch model

--- a/examples/asuc/full_map_render.ipynb
+++ b/examples/asuc/full_map_render.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,10 +120,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Solution 216.717 at 0x1dc3b3bcf60>"
+       "<Solution 216.717 at 0x1f410efdb00>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4091,114 +4091,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['__add__',\n",
-       " '__class__',\n",
-       " '__copy__',\n",
-       " '__deepcopy__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__iadd__',\n",
-       " '__imul__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__isub__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__mul__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__radd__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setstate__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__sub__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_associate_gene',\n",
-       " '_check_bounds',\n",
-       " '_compartments',\n",
-       " '_dissociate_gene',\n",
-       " '_gene_reaction_rule',\n",
-       " '_genes',\n",
-       " '_id',\n",
-       " '_lower_bound',\n",
-       " '_metabolites',\n",
-       " '_model',\n",
-       " '_repr_html_',\n",
-       " '_set_id_with_model',\n",
-       " '_update_awareness',\n",
-       " '_upper_bound',\n",
-       " 'add_metabolites',\n",
-       " 'annotation',\n",
-       " 'boundary',\n",
-       " 'bounds',\n",
-       " 'build_reaction_from_string',\n",
-       " 'build_reaction_string',\n",
-       " 'check_mass_balance',\n",
-       " 'compartments',\n",
-       " 'copy',\n",
-       " 'delete',\n",
-       " 'flux',\n",
-       " 'flux_expression',\n",
-       " 'forward_variable',\n",
-       " 'functional',\n",
-       " 'gene_name_reaction_rule',\n",
-       " 'gene_reaction_rule',\n",
-       " 'genes',\n",
-       " 'get_coefficient',\n",
-       " 'get_coefficients',\n",
-       " 'get_compartments',\n",
-       " 'id',\n",
-       " 'knock_out',\n",
-       " 'lower_bound',\n",
-       " 'metabolites',\n",
-       " 'model',\n",
-       " 'name',\n",
-       " 'notes',\n",
-       " 'objective_coefficient',\n",
-       " 'products',\n",
-       " 'reactants',\n",
-       " 'reaction',\n",
-       " 'reduced_cost',\n",
-       " 'remove_from_model',\n",
-       " 'reverse_id',\n",
-       " 'reverse_variable',\n",
-       " 'reversibility',\n",
-       " 'subsystem',\n",
-       " 'subtract_metabolites',\n",
-       " 'update_variable_bounds',\n",
-       " 'upper_bound',\n",
-       " 'x',\n",
-       " 'y']"
+       "<optlang.glpk_interface.Objective at 0x1f410efd6d8>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(model.reactions[0])"
+    "model.objective"
    ]
   },
   {
